examples/failing/LeadingZeros1.purs
-- @shouldFailWith ErrorParsingModule
module Main where

import Prelude

x = 01
